// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnResizing snapshots should render ColumnResizing 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-wcnq0t SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light SectionColumn__content--two-inputs SectionColumn__content--two-inputs--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="width"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light"
            data-test-scrubbable-input="width"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              W
            </small>
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="width"
            maxlength="6"
            type="number"
            value="100"
          />
          <div
            class="TextField__icon-wrapper TextField__icon-wrapper--light"
          >
            <div
              class="css-wcnq0t TextField__icon TextField__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
              data-test-icon="variant"
              height="12"
              name="Variant"
              width="12"
            />
            <div
              class="Popover Popover--light"
              data-test-popover="popover"
              style="left: 0px; top: 0px;"
            >
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="0"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light PopoverItem__check-icon--selected PopoverItem__check-icon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="fixed-width"
                  height="12"
                  name="FixedWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Fixed width
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="1"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="auto-width"
                  height="12"
                  name="AutoWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Auto width
                </small>
              </div>
              <div
                class="PopoverSeparator PopoverSeparator--light"
              />
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="2"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="min-width"
                  height="12"
                  name="MinWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add min width...
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="3"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="max-width"
                  height="12"
                  name="MaxWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add max width...
                </small>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="height"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light"
            data-test-scrubbable-input="height"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              H
            </small>
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="height"
            maxlength="6"
            type="number"
            value="100"
          />
          <div
            class="TextField__icon-wrapper TextField__icon-wrapper--light"
          >
            <div
              class="css-wcnq0t TextField__icon TextField__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
              data-test-icon="variant"
              height="12"
              name="Variant"
              width="12"
            />
            <div
              class="Popover Popover--light"
              data-test-popover="popover"
              style="left: 0px; top: 0px;"
            >
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="0"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light PopoverItem__check-icon--selected PopoverItem__check-icon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="fixed-height"
                  height="12"
                  name="FixedHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Fixed height
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="1"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="auto-height"
                  height="12"
                  name="AutoHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Auto height
                </small>
              </div>
              <div
                class="PopoverSeparator PopoverSeparator--light"
              />
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="2"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="min-height"
                  height="12"
                  name="MinHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add min height...
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="3"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="max-height"
                  height="12"
                  name="MaxHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add max height...
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-wcnq0t SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light SectionColumn__content--two-inputs SectionColumn__content--two-inputs--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="width"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
            data-test-scrubbable-input="width"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              W
            </small>
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="width"
            maxlength="6"
            type="text"
            value="Mixed"
          />
          <div
            class="TextField__icon-wrapper TextField__icon-wrapper--light"
          >
            <div
              class="css-wcnq0t TextField__icon TextField__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
              data-test-icon="variant"
              height="12"
              name="Variant"
              width="12"
            />
            <div
              class="Popover Popover--light"
              data-test-popover="popover"
              style="left: 0px; top: 0px;"
            >
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="0"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="fixed-width"
                  height="12"
                  name="FixedWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Fixed width
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="1"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="auto-width"
                  height="12"
                  name="AutoWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Auto width
                </small>
              </div>
              <div
                class="PopoverSeparator PopoverSeparator--light"
              />
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="2"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="min-width"
                  height="12"
                  name="MinWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add min width...
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="3"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="max-width"
                  height="12"
                  name="MaxWidth"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add max width...
                </small>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="height"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
            data-test-scrubbable-input="height"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              H
            </small>
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="height"
            maxlength="6"
            type="text"
            value="Mixed"
          />
          <div
            class="TextField__icon-wrapper TextField__icon-wrapper--light"
          >
            <div
              class="css-wcnq0t TextField__icon TextField__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
              data-test-icon="variant"
              height="12"
              name="Variant"
              width="12"
            />
            <div
              class="Popover Popover--light"
              data-test-popover="popover"
              style="left: 0px; top: 0px;"
            >
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="0"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="fixed-height"
                  height="12"
                  name="FixedHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Fixed height
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="1"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="auto-height"
                  height="12"
                  name="AutoHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Auto height
                </small>
              </div>
              <div
                class="PopoverSeparator PopoverSeparator--light"
              />
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="2"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="min-height"
                  height="12"
                  name="MinHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add min height...
                </small>
              </div>
              <div
                class="PopoverItem PopoverItem--light"
                data-test-popover-item="3"
              >
                <div
                  class="css-wcnq0t PopoverItem__check-icon PopoverItem__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="check"
                  height="12"
                  name="Check"
                  width="12"
                />
                <div
                  class="css-wcnq0t PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                  data-test-icon="max-height"
                  height="12"
                  name="MaxHeight"
                  width="12"
                />
                <small
                  class="css-wcnq0t PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                  data-test-text=""
                  style="text-align: inherit;"
                >
                  Add max height...
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;
